pp2/y.output
Terminals unused in grammar

   T_Static
   T_InstanceOf


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: VariableDecl
    5     | FunctionDecl
    6     | ClassDecl
    7     | InterfaceDecl

    8 VariableDecl: Variable ';'

    9 Variable: Type Identifier

   10 VariableList: Variable
   11             | VariableList ',' Variable

   12 LValue: Identifier
   13       | Expr '.' Identifier
   14       | Expr '[' Expr ']'

   15 Type: T_Int
   16     | T_Double
   17     | T_Bool
   18     | T_String
   19     | Identifier
   20     | Type T_Dims

   21 Identifier: T_Identifier

   22 Formals: %empty
   23        | VariableList

   24 FunctionDecl: Type Identifier '(' Formals ')' StmtBlock
   25             | T_Void Identifier '(' Formals ')' StmtBlock

   26 ClassDecl: T_Class Identifier ExtendsClause ImplementsClause '{' FieldList '}'

   27 ExtendsClause: %empty
   28              | T_Extends Identifier

   29 ImplementsClause: %empty
   30                 | T_Implements InterfaceList

   31 InterfaceList: Identifier
   32              | InterfaceList ',' Identifier

   33 FieldList: %empty
   34          | FieldList Field

   35 Field: VariableDecl
   36      | FunctionDecl

   37 InterfaceDecl: T_Interface Identifier '{' PrototypeList '}'

   38 PrototypeList: %empty
   39              | PrototypeList Prototype

   40 Prototype: Type Identifier '(' Formals ')' ';'
   41          | T_Void Identifier '(' Formals ')' ';'

   42 StmtBlock: '{' VariableDeclList StmtList '}'

   43 VariableDeclList: %empty
   44                 | VariableDeclList VariableDecl

   45 StmtList: %empty
   46         | Stmt StmtList

   47 Stmt: ';'
   48     | Expr ';'
   49     | IfStmt
   50     | WhileStmt
   51     | ForStmt
   52     | BreakStmt
   53     | ReturnStmt
   54     | PrintStmt
   55     | SwitchStmt
   56     | StmtBlock

   57 ExprList: Expr
   58         | ExprList ',' Expr

   59 IfStmt: T_If '(' Expr ')' Stmt
   60       | T_If '(' Expr ')' Stmt T_Else Stmt

   61 WhileStmt: T_While '(' Expr ')' Stmt

   62 ForStmt: T_For '(' ';' Expr ';' ')' Stmt
   63        | T_For '(' Expr ';' Expr ';' ')' Stmt
   64        | T_For '(' ';' Expr ';' Expr ')' Stmt
   65        | T_For '(' Expr ';' Expr ';' Expr ')' Stmt

   66 ReturnStmt: T_Return ';'
   67           | T_Return Expr ';'

   68 BreakStmt: T_Break ';'

   69 PrintStmt: T_Print '(' ExprList ')' ';'

   70 SwitchStmt: T_Switch '(' Expr ')' '{' CaseStmts '}'
   71           | T_Switch '(' Expr ')' '{' CaseStmts DefaultStmt '}'

   72 CaseStmts: CaseStmt
   73          | CaseStmts CaseStmt

   74 CaseStmt: T_Case T_IntConstant ':' StmtList

   75 DefaultStmt: T_Default ':' StmtList

   76 Expr: LValue '=' Expr
   77     | Constant
   78     | LValue
   79     | LValue T_Increment
   80     | LValue T_Decrement
   81     | T_This
   82     | Call
   83     | '(' Expr ')'
   84     | Expr '+' Expr
   85     | Expr '-' Expr
   86     | Expr '*' Expr
   87     | Expr '/' Expr
   88     | Expr '%' Expr
   89     | '-' Expr
   90     | Expr '<' Expr
   91     | Expr T_LessEqual Expr
   92     | Expr '>' Expr
   93     | Expr T_GreaterEqual Expr
   94     | Expr T_Equal Expr
   95     | Expr T_NotEqual Expr
   96     | Expr T_And Expr
   97     | Expr T_Or Expr
   98     | '!' Expr
   99     | T_ReadInteger '(' ')'
  100     | T_ReadLine '(' ')'
  101     | T_New Identifier
  102     | T_NewArray '(' Expr ',' Type ')'

  103 Call: Identifier '(' Actuals ')'
  104     | Expr '.' Identifier '(' Actuals ')'

  105 Actuals: %empty
  106        | ExprList

  107 Constant: T_IntConstant
  108         | T_DoubleConstant
  109         | T_BoolConstant
  110         | T_StringConstant
  111         | T_Null


Terminals, with rules where they appear

$end (0) 0
'!' (33) 98
'%' (37) 88
'(' (40) 24 25 40 41 59 60 61 62 63 64 65 69 70 71 83 99 100 102 103
    104
')' (41) 24 25 40 41 59 60 61 62 63 64 65 69 70 71 83 99 100 102 103
    104
'*' (42) 86
'+' (43) 84
',' (44) 11 32 58 102
'-' (45) 85 89
'.' (46) 13 104
'/' (47) 87
':' (58) 74 75
';' (59) 8 40 41 47 48 62 63 64 65 66 67 68 69
'<' (60) 90
'=' (61) 76
'>' (62) 92
'[' (91) 14
']' (93) 14
'{' (123) 26 37 42 70 71
'}' (125) 26 37 42 70 71
error (256)
T_Void (258) 25 41
T_Bool (259) 17
T_Int (260) 15
T_Double (261) 16
T_String (262) 18
T_Class (263) 26
T_LessEqual (264) 91
T_GreaterEqual (265) 93
T_Equal (266) 94
T_NotEqual (267) 95
T_Dims (268) 20
T_Increment (269) 79
T_Decrement (270) 80
T_And (271) 96
T_Or (272) 97
T_Null (273) 111
T_Extends (274) 28
T_This (275) 81
T_Interface (276) 37
T_Implements (277) 30
T_While (278) 61
T_For (279) 62 63 64 65
T_If (280) 59 60
T_Else (281) 60
T_Return (282) 66 67
T_Break (283) 68
T_Switch (284) 70 71
T_Case (285) 74
T_Default (286) 75
T_New (287) 101
T_NewArray (288) 102
T_Print (289) 69
T_ReadInteger (290) 99
T_ReadLine (291) 100
T_Static (292)
T_InstanceOf (293)
T_Identifier (294) 21
T_StringConstant (295) 110
T_IntConstant (296) 74 107
T_DoubleConstant (297) 108
T_BoolConstant (298) 109
UMINUS (299)
NOELSE (300)


Nonterminals, with rules where they appear

$accept (65)
    on left: 0
Program (66)
    on left: 1, on right: 0
DeclList (67)
    on left: 2 3, on right: 1 2
Decl (68)
    on left: 4 5 6 7, on right: 2 3
VariableDecl (69)
    on left: 8, on right: 4 35 44
Variable (70)
    on left: 9, on right: 8 10 11
VariableList (71)
    on left: 10 11, on right: 11 23
LValue (72)
    on left: 12 13 14, on right: 76 78 79 80
Type (73)
    on left: 15 16 17 18 19 20, on right: 9 20 24 40 102
Identifier (74)
    on left: 21, on right: 9 12 13 19 24 25 26 28 31 32 37 40 41 101
    103 104
Formals (75)
    on left: 22 23, on right: 24 25 40 41
FunctionDecl (76)
    on left: 24 25, on right: 5 36
ClassDecl (77)
    on left: 26, on right: 6
ExtendsClause (78)
    on left: 27 28, on right: 26
ImplementsClause (79)
    on left: 29 30, on right: 26
InterfaceList (80)
    on left: 31 32, on right: 30 32
FieldList (81)
    on left: 33 34, on right: 26 34
Field (82)
    on left: 35 36, on right: 34
InterfaceDecl (83)
    on left: 37, on right: 7
PrototypeList (84)
    on left: 38 39, on right: 37 39
Prototype (85)
    on left: 40 41, on right: 39
StmtBlock (86)
    on left: 42, on right: 24 25 56
VariableDeclList (87)
    on left: 43 44, on right: 42 44
StmtList (88)
    on left: 45 46, on right: 42 46 74 75
Stmt (89)
    on left: 47 48 49 50 51 52 53 54 55 56, on right: 46 59 60 61 62
    63 64 65
ExprList (90)
    on left: 57 58, on right: 58 69 106
IfStmt (91)
    on left: 59 60, on right: 49
WhileStmt (92)
    on left: 61, on right: 50
ForStmt (93)
    on left: 62 63 64 65, on right: 51
ReturnStmt (94)
    on left: 66 67, on right: 53
BreakStmt (95)
    on left: 68, on right: 52
PrintStmt (96)
    on left: 69, on right: 54
SwitchStmt (97)
    on left: 70 71, on right: 55
CaseStmts (98)
    on left: 72 73, on right: 70 71 73
CaseStmt (99)
    on left: 74, on right: 72 73
DefaultStmt (100)
    on left: 75, on right: 71
Expr (101)
    on left: 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93
    94 95 96 97 98 99 100 101 102, on right: 13 14 48 57 58 59 60 61
    62 63 64 65 67 70 71 76 83 84 85 86 87 88 89 90 91 92 93 94 95
    96 97 98 102 104
Call (102)
    on left: 103 104, on right: 82
Actuals (103)
    on left: 105 106, on right: 103 104
Constant (104)
    on left: 107 108 109 110 111, on right: 77


State 0

    0 $accept: . Program $end

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    Program        go to state 9
    DeclList       go to state 10
    Decl           go to state 11
    VariableDecl   go to state 12
    Variable       go to state 13
    Type           go to state 14
    Identifier     go to state 15
    FunctionDecl   go to state 16
    ClassDecl      go to state 17
    InterfaceDecl  go to state 18


State 1

   25 FunctionDecl: T_Void . Identifier '(' Formals ')' StmtBlock

    T_Identifier  shift, and go to state 8

    Identifier  go to state 19


State 2

   17 Type: T_Bool .

    $default  reduce using rule 17 (Type)


State 3

   15 Type: T_Int .

    $default  reduce using rule 15 (Type)


State 4

   16 Type: T_Double .

    $default  reduce using rule 16 (Type)


State 5

   18 Type: T_String .

    $default  reduce using rule 18 (Type)


State 6

   26 ClassDecl: T_Class . Identifier ExtendsClause ImplementsClause '{' FieldList '}'

    T_Identifier  shift, and go to state 8

    Identifier  go to state 20


State 7

   37 InterfaceDecl: T_Interface . Identifier '{' PrototypeList '}'

    T_Identifier  shift, and go to state 8

    Identifier  go to state 21


State 8

   21 Identifier: T_Identifier .

    $default  reduce using rule 21 (Identifier)


State 9

    0 $accept: Program . $end

    $end  shift, and go to state 22


State 10

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 1 (Program)

    Decl           go to state 23
    VariableDecl   go to state 12
    Variable       go to state 13
    Type           go to state 14
    Identifier     go to state 15
    FunctionDecl   go to state 16
    ClassDecl      go to state 17
    InterfaceDecl  go to state 18


State 11

    3 DeclList: Decl .

    $default  reduce using rule 3 (DeclList)


State 12

    4 Decl: VariableDecl .

    $default  reduce using rule 4 (Decl)


State 13

    8 VariableDecl: Variable . ';'

    ';'  shift, and go to state 24


State 14

    9 Variable: Type . Identifier
   20 Type: Type . T_Dims
   24 FunctionDecl: Type . Identifier '(' Formals ')' StmtBlock

    T_Dims        shift, and go to state 25
    T_Identifier  shift, and go to state 8

    Identifier  go to state 26


State 15

   19 Type: Identifier .

    $default  reduce using rule 19 (Type)


State 16

    5 Decl: FunctionDecl .

    $default  reduce using rule 5 (Decl)


State 17

    6 Decl: ClassDecl .

    $default  reduce using rule 6 (Decl)


State 18

    7 Decl: InterfaceDecl .

    $default  reduce using rule 7 (Decl)


State 19

   25 FunctionDecl: T_Void Identifier . '(' Formals ')' StmtBlock

    '('  shift, and go to state 27


State 20

   26 ClassDecl: T_Class Identifier . ExtendsClause ImplementsClause '{' FieldList '}'

    T_Extends  shift, and go to state 28

    $default  reduce using rule 27 (ExtendsClause)

    ExtendsClause  go to state 29


State 21

   37 InterfaceDecl: T_Interface Identifier . '{' PrototypeList '}'

    '{'  shift, and go to state 30


State 22

    0 $accept: Program $end .

    $default  accept


State 23

    2 DeclList: DeclList Decl .

    $default  reduce using rule 2 (DeclList)


State 24

    8 VariableDecl: Variable ';' .

    $default  reduce using rule 8 (VariableDecl)


State 25

   20 Type: Type T_Dims .

    $default  reduce using rule 20 (Type)


State 26

    9 Variable: Type Identifier .
   24 FunctionDecl: Type Identifier . '(' Formals ')' StmtBlock

    '('  shift, and go to state 31

    $default  reduce using rule 9 (Variable)


State 27

   25 FunctionDecl: T_Void Identifier '(' . Formals ')' StmtBlock

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 22 (Formals)

    Variable      go to state 32
    VariableList  go to state 33
    Type          go to state 34
    Identifier    go to state 15
    Formals       go to state 35


State 28

   28 ExtendsClause: T_Extends . Identifier

    T_Identifier  shift, and go to state 8

    Identifier  go to state 36


State 29

   26 ClassDecl: T_Class Identifier ExtendsClause . ImplementsClause '{' FieldList '}'

    T_Implements  shift, and go to state 37

    $default  reduce using rule 29 (ImplementsClause)

    ImplementsClause  go to state 38


State 30

   37 InterfaceDecl: T_Interface Identifier '{' . PrototypeList '}'

    $default  reduce using rule 38 (PrototypeList)

    PrototypeList  go to state 39


State 31

   24 FunctionDecl: Type Identifier '(' . Formals ')' StmtBlock

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 22 (Formals)

    Variable      go to state 32
    VariableList  go to state 33
    Type          go to state 34
    Identifier    go to state 15
    Formals       go to state 40


State 32

   10 VariableList: Variable .

    $default  reduce using rule 10 (VariableList)


State 33

   11 VariableList: VariableList . ',' Variable
   23 Formals: VariableList .

    ','  shift, and go to state 41

    $default  reduce using rule 23 (Formals)


State 34

    9 Variable: Type . Identifier
   20 Type: Type . T_Dims

    T_Dims        shift, and go to state 25
    T_Identifier  shift, and go to state 8

    Identifier  go to state 42


State 35

   25 FunctionDecl: T_Void Identifier '(' Formals . ')' StmtBlock

    ')'  shift, and go to state 43


State 36

   28 ExtendsClause: T_Extends Identifier .

    $default  reduce using rule 28 (ExtendsClause)


State 37

   30 ImplementsClause: T_Implements . InterfaceList

    T_Identifier  shift, and go to state 8

    Identifier     go to state 44
    InterfaceList  go to state 45


State 38

   26 ClassDecl: T_Class Identifier ExtendsClause ImplementsClause . '{' FieldList '}'

    '{'  shift, and go to state 46


State 39

   37 InterfaceDecl: T_Interface Identifier '{' PrototypeList . '}'
   39 PrototypeList: PrototypeList . Prototype

    T_Void        shift, and go to state 47
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 48

    Type        go to state 49
    Identifier  go to state 15
    Prototype   go to state 50


State 40

   24 FunctionDecl: Type Identifier '(' Formals . ')' StmtBlock

    ')'  shift, and go to state 51


State 41

   11 VariableList: VariableList ',' . Variable

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    Variable    go to state 52
    Type        go to state 34
    Identifier  go to state 15


State 42

    9 Variable: Type Identifier .

    $default  reduce using rule 9 (Variable)


State 43

   25 FunctionDecl: T_Void Identifier '(' Formals ')' . StmtBlock

    '{'  shift, and go to state 53

    StmtBlock  go to state 54


State 44

   31 InterfaceList: Identifier .

    $default  reduce using rule 31 (InterfaceList)


State 45

   30 ImplementsClause: T_Implements InterfaceList .
   32 InterfaceList: InterfaceList . ',' Identifier

    ','  shift, and go to state 55

    $default  reduce using rule 30 (ImplementsClause)


State 46

   26 ClassDecl: T_Class Identifier ExtendsClause ImplementsClause '{' . FieldList '}'

    $default  reduce using rule 33 (FieldList)

    FieldList  go to state 56


State 47

   41 Prototype: T_Void . Identifier '(' Formals ')' ';'

    T_Identifier  shift, and go to state 8

    Identifier  go to state 57


State 48

   37 InterfaceDecl: T_Interface Identifier '{' PrototypeList '}' .

    $default  reduce using rule 37 (InterfaceDecl)


State 49

   20 Type: Type . T_Dims
   40 Prototype: Type . Identifier '(' Formals ')' ';'

    T_Dims        shift, and go to state 25
    T_Identifier  shift, and go to state 8

    Identifier  go to state 58


State 50

   39 PrototypeList: PrototypeList Prototype .

    $default  reduce using rule 39 (PrototypeList)


State 51

   24 FunctionDecl: Type Identifier '(' Formals ')' . StmtBlock

    '{'  shift, and go to state 53

    StmtBlock  go to state 59


State 52

   11 VariableList: VariableList ',' Variable .

    $default  reduce using rule 11 (VariableList)


State 53

   42 StmtBlock: '{' . VariableDeclList StmtList '}'

    $default  reduce using rule 43 (VariableDeclList)

    VariableDeclList  go to state 60


State 54

   25 FunctionDecl: T_Void Identifier '(' Formals ')' StmtBlock .

    $default  reduce using rule 25 (FunctionDecl)


State 55

   32 InterfaceList: InterfaceList ',' . Identifier

    T_Identifier  shift, and go to state 8

    Identifier  go to state 61


State 56

   26 ClassDecl: T_Class Identifier ExtendsClause ImplementsClause '{' FieldList . '}'
   34 FieldList: FieldList . Field
